Hotfix - correction de 'file' en 'image' dans le swagger.yaml ; Changement de la propriété "grade" pour "rating"
